--- a/front/src/assets/style.css
+++ b/front/src/assets/style.css
@@ -90,6 +90,7 @@ a.white{
 }
 .menu{
     display: flex;
+    justify-content: space-between;
     width: 1400px;
     height: 50px;
     margin: 10px auto;
@@ -98,7 +99,15 @@ a.white{
     /* justify-content: center; */
     align-items: center;
     padding: 8px 20px;
+}
+.menu-left{
+    display: flex;
     gap: 30px;
+    align-items: center;
+}
+.menu-right{
+    display: flex;
+    gap: 20px;
 }
 /* ---- Buttons -------- */
 .btn-menu, .btn-add {
@@ -179,7 +188,7 @@ a.white{
 }
 
 .checkbox-input:checked + .checkbox-custom::before {
-    content: url('/src/pages/icons/vector_checkbox.svg');
+    content: url('../components/icons/vector_checkbox.svg');
     display: block;
     position: absolute;
     top: 0;
